--- a/use/report-delete.adoc
+++ b/use/report-delete.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: use/report-delete.html
 keywords: bluexp reports, data protection reports
-summary: With the BlueXP reports service, you can quickly identify the number of files, directories, symbolic links, hard links, depth and breadth of file system trees, largest files, and more in your storage landscape.
+summary: You might want to delete a report if it contained an error that you fixed or you no longer need that report. 
 ---
 
 = Delete a report
@@ -11,9 +11,6 @@ summary: With the BlueXP reports service, you can quickly identify the number of
 :imagesdir: ../media/use/
 
 [.lead]
-With the BlueXP reports service, you can quickly identify the number of files, directories, symbolic links, hard links, depth and breadth of file system trees, largest files, and more in your storage landscape.  
-
-
 You might want to delete a report if it contained an error that you fixed or you no longer need that report. 
 
 .Steps 
