--- a/use/report-delete.adoc
+++ b/use/report-delete.adoc
@@ -11,7 +11,7 @@ summary: You might want to delete a report if it contained an error that you fix
 :imagesdir: ../media/use/
 
 [.lead]
-You might want to delete a report if it contained an error that you fixed or you no longer need that report. 
+You might want to delete a report if it contained an error that you fixed or you no longer need that report. You can delete one or more instances of a report. 
 
 .Steps 
 
@@ -19,5 +19,9 @@ You might want to delete a report if it contained an error that you fixed or you
 
 . From the Reports Dashboard, select a report.
 . On the report row, select the *Actions* … menu and select *Delete Report*.  
+. If multiple instances of the report exist, select those you want to delete and select *Delete*. 
++
+image:report-delete-multiple.png["This image shows the Delete page that enables you to delete multiple reports"]
+
 
 . Select *Delete* to confirm the deletion. 
