--- a/get-started/setup.adoc
+++ b/get-started/setup.adoc
@@ -1,14 +1,14 @@
 ---
 sidebar: sidebar
 permalink: get-started/setup.html
-keywords: bluexp, reports, storage, inventory, data protection
-summary: To use BlueXP reports, perform a few steps to set it up.    
+keywords: bluexp, reports, storage, inventory, volumes
+summary: To use BlueXP estate reports, perform a few steps to set it up.    
 ---
 
-= Set up BlueXP reports
+= Set up BlueXP estate reports
 :hardbreaks:
 :icons: font
 :imagesdir: ../media/get-started/
 
 [.lead]
-You do not need to configure the BlueXP reports service. The BlueXP reports option is automatically enabled and appears on the BlueXP left navigation. 
+You do not need to configure the BlueXP estate reports service. The BlueXP estate reports option is automatically enabled and appears on the BlueXP left navigation. 
