--- a/use/report-delete.adoc
+++ b/use/report-delete.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: use/report-delete.html
-keywords: bluexp reports, data protection reports
+keywords: BlueXP estate reports, volume reports
 summary: You might want to delete a report if it contained an error that you fixed or you no longer need that report. 
 ---
 
@@ -15,11 +15,11 @@ You might want to delete a report if it contained an error that you fixed or you
 
 .Steps 
 
-. From the BlueXP left nav, select *Storage* > *Reports*.
+. From the BlueXP left nav, select *Storage* > *Reports* > *Estate reports*.
 
 . From the Reports Dashboard, select a report.
 . On the report row, select the *Actions* … menu and select *Delete Report*.  
-. If multiple instances of the report exist, select those you want to delete and select *Delete*. 
+. If multiple instances of the report exist, select those that you want to delete and select *Delete*. 
 +
 image:report-delete-multiple.png["This image shows the Delete page that enables you to delete multiple reports"]
 
