--- a/use/report-delete.adoc
+++ b/use/report-delete.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: use/report-delete.html
-keywords: BlueXP estate reports, volume reports
+keywords: BlueXP migration reports, volume reports
 summary: You might want to delete a report if it contained an error that you fixed or you no longer need that report. 
 ---
 
@@ -15,7 +15,7 @@ You might want to delete a report if it contained an error that you fixed or you
 
 .Steps 
 
-. From the BlueXP left nav, select *Storage* > *Reports* > *Estate reports*.
+. From the BlueXP left nav, select *Storage* > *Migration reports*.
 
 . From the Reports Dashboard, select a report.
 . On the report row, select the *Actions* … menu and select *Delete Report*.  
