--- a/use/report-overview.adoc
+++ b/use/report-overview.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
 permalink: use/report-overview.html
-keywords: BlueXP estate reports, volume reports
-summary: With the BlueXP estate reports service, you can quickly identify the number of files, directories, symbolic links, hard links, depth and breadth of file system trees, largest files, and more in your storage landscape.
+keywords: BlueXP migration reports, volume reports
+summary: With the BlueXP migration reports service, you can quickly identify the number of files, directories, symbolic links, hard links, depth and breadth of file system trees, largest files, and more in your storage landscape.
 ---
 
 = Reports overview
@@ -11,11 +11,11 @@ summary: With the BlueXP estate reports service, you can quickly identify the nu
 :imagesdir: ../media/use/
 
 [.lead]
-With the BlueXP estate reports service, you can quickly identify the number of files, directories, symbolic links, hard links, depth and breadth of file system trees, largest files, and more in your storage landscape.  
+With the BlueXP migration reports service, you can quickly identify the number of files, directories, symbolic links, hard links, depth and breadth of file system trees, largest files, and more in your storage landscape.  
 
-The BlueXP estate reports service display data by volumes.
+The BlueXP migration reports service display data by volumes.
 
-Using BlueXP estate reports, you can accomplish these goals: 
+Using BlueXP migration reports, you can accomplish these goals: 
 
 * link:../use/report-create.html[Create a report]
 * link:../use/report-notification.html[Enable notifications]
